--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.database=movie-api-db
 spring.data.mongodb.uri=mongodb+srv://SolidSnake:abcd@cluster0.3rylvlh.mongodb.net/
